make changes in learning course layout and styles

--- a/index.html
+++ b/index.html
@@ -63,196 +63,220 @@
           </div>
         </div>
       </section>
-      <section class="learning_courses">
+      <section class="learning-courses">
         <div class="container">
-          <div class="section_title">
+          <div class="section-title">
             <h2>სასწავლო კურსები</h2>
           </div>
 
-          <div class="courses_container">
-            <div class="course_box">
-              <div class="course_img">
+          <div class="courses-container">
+            <div class="course-box">
+              <div class="course-img">
                 <img
-                  src="./assets/images/courses_images/ios_development.png"
+                  src="./assets/images/courses-images/ios-development.png"
                   alt="iOS Development"
                 />
               </div>
-              <div class="course_body">
-                <div class="course_text">
-                  <h5 class="course_title text">iOS Development</h5>
-                  <span class="registration_status text"
+              <div class="course-body">
+                <div class="course-text">
+                  <h5 class="course-title text">iOS Development</h5>
+                  <span class="registration-status text"
                     >რეგისტრაცია დასრულებულია</span
                   >
                 </div>
-                <div class="course_info">
-                  <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <span>კურსის დეტალები</span>
+                <div class="course-info">
+                  <img
+                    src="./assets/images/arrow.svg"
+                    alt="course details arrow"
+                  />
+                  <a href="#">კურსის დეტალები</a>
                 </div>
               </div>
             </div>
-            <div class="course_box">
-              <div class="course_img">
+            <div class="course-box">
+              <div class="course-img">
                 <img
-                  src="./assets/images/courses_images/react.jpg"
+                  src="./assets/images/courses-images/react.jpg"
                   alt="React course"
                 />
               </div>
-              <div class="course_body">
-                <div class="course_text">
-                  <h5 class="course_title text">React</h5>
-                  <span class="registration_status text"
+              <div class="course-body">
+                <div class="course-text">
+                  <h5 class="course-title text">React</h5>
+                  <span class="registration-status text"
                     >რეგისტრაცია დასრულებულია</span
                   >
                 </div>
-                <div class="course_info">
-                  <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <span>კურსის დეტალები</span>
+                <div class="course-info">
+                  <img
+                    src="./assets/images/arrow.svg"
+                    alt="course details arrow"
+                  />
+                  <a href="#">კურსის დეტალები</a>
                 </div>
               </div>
             </div>
-            <div class="course_box">
-              <div class="course_img">
+            <div class="course-box">
+              <div class="course-img">
                 <img
-                  src="./assets/images/courses_images/python.jpg"
+                  src="./assets/images/courses-images/python.jpg"
                   alt="iOS Development"
                 />
               </div>
-              <div class="course_body">
-                <div class="course_text">
-                  <h5 class="course_title text">Intro to Python</h5>
-                  <span class="registration_status text"
+              <div class="course-body">
+                <div class="course-text">
+                  <h5 class="course-title text">Intro to Python</h5>
+                  <span class="registration-status text"
                     >რეგისტრაცია დასრულებულია</span
                   >
                 </div>
-                <div class="course_info">
-                  <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <span>კურსის დეტალები</span>
+                <div class="course-info">
+                  <img
+                    src="./assets/images/arrow.svg"
+                    alt="course details arrow"
+                  />
+                  <a href="#">კურსის დეტალები</a>
                 </div>
               </div>
             </div>
-            <div class="course_box">
-              <div class="course_img">
+            <div class="course-box">
+              <div class="course-img">
                 <img
-                  src="./assets/images/courses_images/advanced_python.jpg"
+                  src="./assets/images/courses-images/advanced-python.jpg"
                   alt="Intro to Python"
                 />
               </div>
-              <div class="course_body">
-                <div class="course_text">
-                  <h5 class="course_title text">Advanced Python</h5>
-                  <span class="registration_status text"
+              <div class="course-body">
+                <div class="course-text">
+                  <h5 class="course-title text">Advanced Python</h5>
+                  <span class="registration-status text"
                     >რეგისტრაცია დასრულებულია</span
                   >
                 </div>
-                <div class="course_info">
-                  <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <span>კურსის დეტალები</span>
+                <div class="course-info">
+                  <img
+                    src="./assets/images/arrow.svg"
+                    alt="course details arrow"
+                  />
+                  <a href="#">კურსის დეტალები</a>
                 </div>
               </div>
             </div>
-            <div class="course_box">
-              <div class="course_img">
+            <div class="course-box">
+              <div class="course-img">
                 <img
-                  src="./assets/images/courses_images/advanced_cybersecurity.jpg"
+                  src="./assets/images/courses-images/advanced-cybersecurity.jpg"
                   alt="Advanced Cybersecurity Course"
                 />
               </div>
-              <div class="course_body">
-                <div class="course_text">
-                  <h5 class="course_title text">
+              <div class="course-body">
+                <div class="course-text">
+                  <h5 class="course-title text">
                     Advanced Cybersecurity Course
                   </h5>
-                  <span class="registration_status text"
+                  <span class="registration-status text"
                     >რეგისტრაცია დასრულებულია</span
                   >
                 </div>
-                <div class="course_info">
-                  <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <span>კურსის დეტალები</span>
+                <div class="course-info">
+                  <img
+                    src="./assets/images/arrow.svg"
+                    alt="course details arrow"
+                  />
+                  <a href="#">კურსის დეტალები</a>
                 </div>
               </div>
             </div>
-            <div class="course_box">
-              <div class="course_img">
+            <div class="course-box">
+              <div class="course-img">
                 <img
-                  src="./assets/images/courses_images/TOT.jpg"
+                  src="./assets/images/courses-images/TOT.jpg"
                   alt="ToT - Training of Trainers
                 "
                 />
               </div>
-              <div class="course_body">
-                <div class="course_text">
-                  <h5 class="course_title text">ToT - Training of Trainers</h5>
-                  <span class="registration_status text"
+              <div class="course-body">
+                <div class="course-text">
+                  <h5 class="course-title text">ToT - Training of Trainers</h5>
+                  <span class="registration-status text"
                     >რეგისტრაცია დასრულებულია</span
                   >
                 </div>
-                <div class="course_info">
-                  <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <span>კურსის დეტალები</span>
+                <div class="course-info">
+                  <img
+                    src="./assets/images/arrow.svg"
+                    alt="course details arrow"
+                  />
+                  <a href="#">კურსის დეტალები</a>
                 </div>
               </div>
             </div>
-            <div class="course_box">
-              <div class="course_img">
+            <div class="course-box">
+              <div class="course-img">
                 <img
-                  src="./assets/images/courses_images/blockchain.jpg"
+                  src="./assets/images/courses-images/blockchain.jpg"
                   alt="Blockchain"
                 />
               </div>
-              <div class="course_body">
-                <div class="course_text">
-                  <h5 class="course_title text">Blockchain</h5>
-                  <span class="registration_status text"
+              <div class="course-body">
+                <div class="course-text">
+                  <h5 class="course-title text">Blockchain</h5>
+                  <span class="registration-status text"
                     >რეგისტრაცია დასრულებულია</span
                   >
                 </div>
-                <div class="course_info">
-                  <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <span>კურსის დეტალები</span>
+                <div class="course-info">
+                  <img
+                    src="./assets/images/arrow.svg"
+                    alt="course details arrow"
+                  />
+                  <a href="#">კურსის დეტალები</a>
                 </div>
               </div>
             </div>
-            <div class="course_box">
-              <div class="course_img">
+            <div class="course-box">
+              <div class="course-img">
                 <img
-                  src="./assets/images/courses_images/devops.jpg"
+                  src="./assets/images/courses-images/devops.jpg"
                   alt="DevOps"
                 />
               </div>
-              <div class="course_body">
-                <div class="course_text">
-                  <h5 class="course_title text">DevOps</h5>
-                  <span class="registration_status text"
-                    >რეგისტრაცია დასრულებულია</span
-                  >
+              <div class="course-body">
+                <div class="course-text">
+                  <h5 class="course-title text">DevOps</h5>
+                  <span class="registration-status text"
+                    >რეგისტრაცია დასრულებულია
+                  </span>
                 </div>
-                <div class="course_info">
+                <div class="course-info">
                   <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <span>კურსის დეტალები</span>
+                  <a href="#">კურსის დეტალები</a>
                 </div>
               </div>
             </div>
-            <div class="course_box">
-              <div class="course_img">
+            <div class="course-box">
+              <div class="course-img">
                 <img
-                  src="./assets/images/courses_images/information_security.jpg"
+                  src="./assets/images/courses-images/information-security.jpg"
                   alt="
                 Information Security Governance"
                 />
               </div>
-              <div class="course_body">
-                <div class="course_text">
-                  <h5 class="course_title text">
+              <div class="course-body">
+                <div class="course-text">
+                  <h5 class="course-title text">
                     Information Security Governance
                   </h5>
-                  <span class="registration_status text"
+                  <span class="registration-status text"
                     >რეგისტრაცია დასრულებულია</span
                   >
                 </div>
-                <div class="course_info">
-                  <img src="./assets/images/arrow.svg" alt="arrow" />
-                  <span>კურსის დეტალები</span>
+                <div class="course-info">
+                  <img
+                    src="./assets/images/arrow.svg"
+                    alt="course details arrow"
+                  />
+                  <a href="#">კურსის დეტალები</a>
                 </div>
               </div>
             </div>
