make changes in questions section

--- a/index.html
+++ b/index.html
@@ -284,27 +284,27 @@
         </div>
       </section>
       <section>slider</section>
-      <section class="faq_section">
-        <div class="container_faq">
-          <div class="faq_text">
+      <section class="faq-section">
+        <div class="container-faq">
+          <div class="faq-text">
             <h2>ხშირად დასმული კითხვები</h2>
-            <a href="#" class="view_all">
+            <a href="#" class="view-all">
               <span>ყველა კითხვა</span>
             </a>
           </div>
-          <div class="faq_list">
-            <div class="faq_item">
-              <div class="faq_question">
+          <div class="faq-list">
+            <div class="faq-item">
+              <div class="faq-question">
                 <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
                 <img src="./assets/images/downward-arrow.svg" />
               </div>
-              <article class="faq_answer">
+              <article class="faq-answer">
                 <p>
                   <span>
                     კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:
                   </span>
                 </p>
-                <div class="info_about_course">
+                <div class="info-about-course">
                   <p>
                     <span class="level"> I ეტაპი - </span>
                     <span>
@@ -352,12 +352,12 @@
                 </p>
               </article>
             </div>
-            <div class="faq_item">
-              <div class="faq_question">
+            <div class="faq-item">
+              <div class="faq-question">
                 <h3>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</h3>
                 <img src="./assets/images/downward-arrow.svg" />
               </div>
-              <article class="faq_answer">
+              <article class="faq-answer">
                 <p>
                   TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ
                   კანდიდატს აქვს მხოლოდ ერთი კურსის გავლის შესაძლებლობა. გარდა
@@ -366,12 +366,12 @@
                 </p>
               </article>
             </div>
-            <div class="faq_item">
-              <div class="faq_question">
+            <div class="faq-item">
+              <div class="faq-question">
                 <h3>რა ღირს სწავლა პროგრამის ფარგლებში?</h3>
                 <img src="./assets/images/downward-arrow.svg" />
               </div>
-              <article class="faq_answer">
+              <article class="faq-answer">
                 <p>
                   პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია
                   თიბისი ბანკისა და USAID-ის მიერ.
