start slider section set up

--- a/index.html
+++ b/index.html
@@ -283,7 +283,47 @@
           </div>
         </div>
       </section>
-      <section>slider</section>
+      <section class="slider-section">
+        <div class="slider-container">
+          <img
+            class="slider-arrow"
+            id="prev-arrow"
+            src="./assets/images/slider-images/slider-left-arrow.svg"
+          />
+          <div class="slide slide1">
+            <div>
+              <img src="./assets/images/slider-images/usaid.png" />
+            </div>
+            <div>
+              <img src="./assets/images/slider-images/space.png" />
+            </div>
+            <div>
+              <img src="./assets/images/slider-images/tineti.png" />
+            </div>
+          </div>
+          <div class="slide slide2">
+            <div>
+              <img src="./assets/images/slider-images/tegeta.png" />
+            </div>
+            <div>
+              <img src="./assets/images/slider-images/spectre.png" />
+            </div>
+            <div>
+              <img src="./assets/images/slider-images/tbc-lizingi.png" />
+            </div>
+          </div>
+          <div class="slide slide3">
+            <div>
+              <img src="./assets/images/slider-images/UFC.png" />
+            </div>
+          </div>
+          <img
+            class="slider-arrow"
+            id="next-arrow"
+            src="./assets/images/slider-images/slider-right-arrow.svg"
+          />
+        </div>
+      </section>
       <section class="faq-section">
         <div class="container-faq">
           <div class="faq-text">
@@ -414,6 +454,7 @@
       </div>
     </footer>
 
-    <script type="module" src="scripts/script.js"></script>
+    <!-- <script type="module" src="scripts/script.js"></script> -->
+    <script src="scripts/slider/slider.js"></script>
   </body>
 </html>
