add functionality in slider section

--- a/index.html
+++ b/index.html
@@ -284,36 +284,31 @@
         </div>
       </section>
       <section class="slider-section">
+        <div class="slider-title container">
+          <h2>პროექტის პარტნიორები</h2>
+        </div>
         <div class="slider-container">
           <img
             class="slider-arrow"
             id="prev-arrow"
             src="./assets/images/slider-images/slider-left-arrow.svg"
           />
-          <div class="slide slide1">
-            <div>
+          <div class="slide">
+            <div class="slides-box">
               <img src="./assets/images/slider-images/usaid.png" />
-            </div>
-            <div>
               <img src="./assets/images/slider-images/space.png" />
-            </div>
-            <div>
               <img src="./assets/images/slider-images/tineti.png" />
             </div>
           </div>
-          <div class="slide slide2">
-            <div>
+          <div class="slide">
+            <div class="slides-box">
               <img src="./assets/images/slider-images/tegeta.png" />
-            </div>
-            <div>
               <img src="./assets/images/slider-images/spectre.png" />
-            </div>
-            <div>
               <img src="./assets/images/slider-images/tbc-lizingi.png" />
             </div>
           </div>
-          <div class="slide slide3">
-            <div>
+          <div class="slide">
+            <div class="last-slide">
               <img src="./assets/images/slider-images/UFC.png" />
             </div>
           </div>
@@ -323,6 +318,7 @@
             src="./assets/images/slider-images/slider-right-arrow.svg"
           />
         </div>
+        <div class="slider-bullets"></div>
       </section>
       <section class="faq-section">
         <div class="container-faq">
