functionality changes in questions and header js files

--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
           </div>
           <div class="faq-list">
             <div class="faq-item">
-              <div class="faq-question">
+              <div class="faq-question" data-container="toggle-1">
                 <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
                 <img src="./assets/images/downward-arrow.svg" />
               </div>
-              <article class="faq-answer">
+              <article class="faq-answer" id="toggle-">
                 <p>
                   <span>
                     კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:
@@ -389,11 +389,11 @@
               </article>
             </div>
             <div class="faq-item">
-              <div class="faq-question">
+              <div class="faq-question" data-container="toggle-2">
                 <h3>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</h3>
                 <img src="./assets/images/downward-arrow.svg" />
               </div>
-              <article class="faq-answer">
+              <article class="faq-answer" id="toggle-2">
                 <p>
                   TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ
                   კანდიდატს აქვს მხოლოდ ერთი კურსის გავლის შესაძლებლობა. გარდა
@@ -403,11 +403,11 @@
               </article>
             </div>
             <div class="faq-item">
-              <div class="faq-question">
+              <div class="faq-question" data-container="toggle-3">
                 <h3>რა ღირს სწავლა პროგრამის ფარგლებში?</h3>
                 <img src="./assets/images/downward-arrow.svg" />
               </div>
-              <article class="faq-answer">
+              <article class="faq-answer" id="toggle-3">
                 <p>
                   პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია
                   თიბისი ბანკისა და USAID-ის მიერ.
@@ -450,7 +450,7 @@
       </div>
     </footer>
 
-    <!-- <script type="module" src="scripts/script.js"></script> -->
-    <script src="scripts/slider/slider.js"></script>
+    <script type="module" src="scripts/script.js"></script>
+    <script src="scripts/slider/slider.js" defer></script>
   </body>
 </html>
