--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
                 <img src="./assets/images/downward-arrow.svg" />
               </div>
-              <article class="faq-answer" id="toggle-">
+              <article class="faq-answer" id="toggle-1">
                 <p>
                   <span>
                     კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:
@@ -451,6 +451,5 @@
     </footer>
 
     <script type="module" src="scripts/script.js"></script>
-    <script src="scripts/slider/slider.js" defer></script>
   </body>
 </html>
