Initiate responsive design implementation with media queries

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </div>
         <div class="slider-container">
           <img
-            class="slider-arrow"
+            class="slider-arrow arrow"
             id="prev-arrow"
             src="./assets/images/slider-images/slider-left-arrow.svg"
           />
@@ -313,7 +313,7 @@
             </div>
           </div>
           <img
-            class="slider-arrow"
+            class="slider-arrow arrow"
             id="next-arrow"
             src="./assets/images/slider-images/slider-right-arrow.svg"
           />
@@ -322,11 +322,11 @@
       </section>
       <section class="faq-section">
         <div class="container-faq">
-          <div class="faq-text">
+          <a href="#" class="view-all">
+            <span>ყველა კითხვა</span>
+          </a>
+          <div class="faq-title">
             <h2>ხშირად დასმული კითხვები</h2>
-            <a href="#" class="view-all">
-              <span>ყველა კითხვა</span>
-            </a>
           </div>
           <div class="faq-list">
             <div class="faq-item">
